--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -40,7 +40,13 @@
               </div>
 
               <div class="form-group">
-                <button [disabled]="registroForm.invalid" type="submit" class="btn btn-primary submit-btn btn-block">Crear cuenta</button>
+                <button *ngIf="!cargando" type="submit" [disabled]="registroForm.invalid" class="btn btn-primary submit-btn btn-block">
+                  Crear Cuenta
+                </button>
+                <button *ngIf="cargando" type="button" [disabled]="true" class="btn btn-primary submit-btn btn-block">
+                  <i class="fa fa-spin fa-sync"></i>
+                  Espere...
+                </button>
               </div>
               <div class="text-block text-center my-3">
                 <span class="text-small font-weight-semibold">ya tienes una cuenta?</span>
